--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qmsgnt-napcat",
   "private": true,
   "type": "module",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "scripts": {
     "watch:dev": "vite --mode development",
     "watch:prod": "vite --mode production",
@@ -14,11 +14,12 @@
     "watch": "npm run watch:dev",
     "debug-win": "powershell dist/napcat.ps1",
     "lint": "eslint --fix src/**/*.{js,ts}",
-    "release": "npm run build:prod",
+    "release": "npm run build:webui && copy .\\src\\webui\\dist\\renderer.js .\\static\\assets\\ && npm run build:prod",
     "depend": "cd dist && npm install --omit=dev"
   },
   "devDependencies": {
     "@log4js-node/log4js-api": "^1.0.2",
+    "@protobuf-ts/plugin": "^2.9.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/cors": "^2.8.17",
@@ -43,11 +44,11 @@
     "vite": "^5.2.6",
     "vite-plugin-cp": "^4.0.8",
     "vite-plugin-dts": "^3.8.2",
-    "vite-tsconfig-paths": "^4.3.2",
-    "@protobuf-ts/plugin": "^2.9.4"
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
     "ajv": "^8.13.0",
+    "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
     "express": "^5.0.0-beta.2",
