--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "qmsgnt-napcat",
   "private": true,
   "type": "module",
-  "version": "1.0.7",
+  "version": "1.0.10",
   "scripts": {
-    "watch:dev": "vite --mode development",
-    "watch:prod": "vite --mode production",
-    "build:dev": "vite build --mode development",
-    "build:prod": "vite build --mode production",
-    "build": "npm run build:dev",
-    "build:core": "cd ./src/core && npm run build && cd ../.. && node ./script/copy-core.cjs",
+    "build:framework": "vite build --mode framework",
+    "build:shell": "vite build --mode shell",
     "build:webui": "cd ./src/webui && vite build",
-    "watch": "npm run watch:dev",
-    "debug-win": "powershell dist/napcat.ps1",
     "lint": "eslint --fix src/**/*.{js,ts}",
-    "release": "npm run build:webui && copy .\\src\\webui\\dist\\renderer.js .\\static\\assets\\ && npm run build:prod",
-    "depend": "cd dist && npm install --omit=dev"
+    "depend": "cd dist && npm install --omit=dev",
+    "release": "npm run build:webui && copy .\\src\\webui\\dist\\renderer.js .\\static\\assets\\ && npm run build:shell",
+    "copy2qq": "xcopy /C /S /I /Y dist\\* \"D:\\Program Files\\Tencent\\QQNT\\resources\\app\\app_launcher\\napcat\"",
+    "deploy": "npm run release && npm run copy2qq",
+    "QQ": "npm run deploy && chcp 65001 && \"D:\\Program Files\\Tencent\\QQNT\\QQ.exe\" --enable-logging"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@log4js-node/log4js-api": "^1.0.2",
     "@protobuf-ts/plugin": "^2.9.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -26,10 +27,10 @@
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
     "@types/fluent-ffmpeg": "^2.1.24",
-    "@types/node": "^20.11.30",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.0.1",
     "@types/qrcode-terminal": "^0.12.2",
-    "@types/uuid": "^9.0.8",
-    "@types/ws": "^8.5.10",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
@@ -42,14 +43,16 @@
     "rollup-plugin-obfuscator": "^1.1.0",
     "typescript": "^5.3.3",
     "vite": "^5.2.6",
+    "vite-plugin-babel": "^1.2.0",
     "vite-plugin-cp": "^4.0.8",
     "vite-plugin-dts": "^3.8.2",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
     "ajv": "^8.13.0",
+    "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
-    "commander": "^12.0.0",
+    "commander": "^12.1.0",
     "cors": "^2.8.5",
     "express": "^5.0.0-beta.2",
     "fast-xml-parser": "^4.3.6",
@@ -59,9 +62,8 @@
     "json-schema-to-ts": "^3.1.0",
     "log4js": "^6.9.1",
     "qrcode-terminal": "^0.12.0",
-    "silk-wasm": "^3.3.4",
-    "sqlite3": "^5.1.7",
-    "uuid": "^9.0.1",
-    "ws": "^8.16.0"
+    "silk-wasm": "^3.6.1",
+    "strtok3": "8.0.1",
+    "ws": "^8.18.0"
   }
 }
